# songbird-node

./: Cargo.toml  Cross.toml  README.md  Shuttle.toml  build.rs  config.json
.github/workflows/: main.yml
src/: discord.rs  ffmpeg_support.rs  main.rs  obj.rs  obj_event.rs  router.rs  task_support.rs  types.rs  youtube_supprt.rs
