[package]
name = "songbird_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
url = "*"
futures-util = "*"
serde_json = "*"
json_comments = "*"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
songbird = { version = "0.3.2", features = ["driver"] }
async-trait = "0.1.74"
axum = {version = "0.6", features=["ws"]}
reqwest = { version = "0.11", features = ["rustls-tls"] }
sysinfo = "0.29.10"